refactor(citrus-3.0): Update to Citrus 3.0.0